blueprints/tetragon/ciliumnetworkpolicy.yml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: tetragon
spec:
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/instance: tetragon
      k8s:app.kubernetes.io/name: tetragon
      k8s:io.cilium.k8s.namespace.labels.app.kubernetes.io/instance: flux-system
      k8s:io.cilium.k8s.namespace.labels.app.kubernetes.io/part-of: flux
      k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: flux-system
      k8s:io.cilium.k8s.namespace.labels.kustomize.toolkit.fluxcd.io/name: flux-system
      k8s:io.cilium.k8s.namespace.labels.kustomize.toolkit.fluxcd.io/namespace: flux-system
      k8s:io.kubernetes.pod.namespace: flux-system
  ingress:
    - fromEndpoints:
        - matchExpressions:
            - key: k8s:io.kubernetes.pod.namespace
              operator: In
              values:
                - auth
            - key: k8s:app.kubernetes.io/name
              operator: In
              values:
                - oathkeeper
      toPorts:
        - ports:
            - port: "4466"
              protocol: TCP
          rules:
            http: [{}]
